# messing-with-fpga

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flash.py  memory.x
.cargo/: config.toml
fpga/: fpga.ffpga
fpga/ffpga/src/: main.v  uart_rx.v
src/: main.rs
